[package]
name = "day13"
version = "0.1.0"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.20.6"
itertools = "0.8.2"
common = { path = "../common" }