[package]
name = "day13"
version = "1.0.0"
authors = ["Denis Bourge <denis.bourge@sharingcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.20.6"
common = { path = "../common" }
colored = "1.9"
crossterm = "0.14.0"